--- a/TiendApp/app/src/main/res/layout/activity_home.xml
+++ b/TiendApp/app/src/main/res/layout/activity_home.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,9 +13,15 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".HomeActivity">
 
+
+
     <TextView android:text="Hello World!" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+
+    <include
+        tools:context=".HomeActivity"
+        layout="@layout/navigation_drawer"/>
 
 
 </RelativeLayout>
