--- a/TiendApp/app/src/main/res/menu/home_menu.xml
+++ b/TiendApp/app/src/main/res/menu/home_menu.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    android:id="@+id/home_tool_bar">
+
+
 
     <item
         android:title="@string/search_action"
