--- a/TiendApp/app/src/main/res/layout/navigation_drawer.xml
+++ b/TiendApp/app/src/main/res/layout/navigation_drawer.xml
@@ -14,11 +14,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
 
         app:headerLayout="@layout/navigation_drawer_header"
         android:id="@+id/left_drawer"
-        android:layout_width="240dp"
+        android:layout_width="280dp"
         android:layout_height="match_parent"
         android:layout_gravity="start|bottom"
         android:choiceMode="singleChoice"
@@ -28,7 +28,7 @@
 
 
 
-    </ListView>
+    </android.support.v7.widget.RecyclerView>
 
 
 
