--- a/TiendApp/app/src/main/res/layout/navigation_drawer_option.xml
+++ b/TiendApp/app/src/main/res/layout/navigation_drawer_option.xml
@@ -27,6 +27,7 @@
         android:paddingLeft="16dp"
         android:paddingTop="24dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="@color/colorPrimaryDark"
         android:text="Test"
         android:id="@+id/drawer_option_name"/>
 
