--- a/TiendApp/app/src/main/res/menu/home_menu.xml
+++ b/TiendApp/app/src/main/res/menu/home_menu.xml
@@ -2,7 +2,9 @@
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
 
+    tools:context=".activities.HomeActivity."
     android:id="@+id/home_tool_bar">
 
 
