--- a/TiendApp/app/src/main/res/values/styles.xml
+++ b/TiendApp/app/src/main/res/values/styles.xml
@@ -7,6 +7,15 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
+        <item name="android:textColorPrimary">@color/textColorPrimary</item>
+        <item name="android:actionMenuTextColor">@color/textColorPrimary</item>
+        <item name="android:textColorSecondary">@color/textColorPrimary</item>
+
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+
+
+        <item name="android:fitsSystemWindows">true</item>
 
         <item name="android:windowActionBarOverlay">true</item>
 
