--- a/TiendApp/app/src/main/res/menu/catalogue_menu.xml
+++ b/TiendApp/app/src/main/res/menu/catalogue_menu.xml
@@ -4,7 +4,7 @@
 
     <item
         android:title="@string/search_action"
-        android:id="@+id/search_bar"
+        android:id="@+id/home_tool_bar_search_bar"
         android:icon="@drawable/ic_search_white_24dp"
         android:orderInCategory="100"
         app:showAsAction="ifRoom"
