--- a/TiendApp/app/src/main/res/menu/catalogue_menu.xml
+++ b/TiendApp/app/src/main/res/menu/catalogue_menu.xml
@@ -10,25 +10,27 @@
         app:showAsAction="ifRoom"
 
         />
+
+
     <item
-        android:title="@string/search_action"
+        android:title="@string/filter_action"
         android:id="@+id/filter_action"
-        android:icon="@drawable/ic_search_white_24dp"
+        android:icon="@drawable/ic_filter_list_white_24dp"
         android:orderInCategory="90"
         app:showAsAction="ifRoom"
 
         />
     <item
-        android:title="@string/search_action"
+        android:title="@string/sort_action"
         android:id="@+id/sort_action"
-        android:icon="@drawable/ic_search_white_24dp"
+        android:icon="@drawable/ic_sort_white_24dp"
         android:orderInCategory="90"
         app:showAsAction="ifRoom"
 
         />
 
     <item
-        android:title="@string/search_action"
+        android:title="@string/more_action"
         android:id="@+id/more_action"
         android:icon="@drawable/ic_more_vert_white_24dp"
         app:showAsAction="always"
