--- a/TiendApp/app/src/main/res/menu/home_menu.xml
+++ b/TiendApp/app/src/main/res/menu/home_menu.xml
@@ -12,6 +12,7 @@
         android:id="@+id/search_bar"
         android:icon="@drawable/ic_search_white_24dp"
         app:showAsAction="ifRoom"
+        app:actionViewClass="android.support.v7.widget.SearchView"/>
 
         />
 </menu>
