--- a/TiendApp/app/src/main/res/layout/activity_categories.xml
+++ b/TiendApp/app/src/main/res/layout/activity_categories.xml
@@ -8,6 +8,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="hci.tiendapp.activities.CategoriesActivity">
+    tools:context=".CategoriesActivity">
+
+    <include
+        tools:context =".CategoriesActivity"
+        layout="@layout/navigation_drawer" />
+
+    <TextView android:text="EePuto!" android:layout_width="wrap_content"
+        android:layout_height="wrap_content" android:id="@+id/hola_mundo"/>
+
 
 </RelativeLayout>
