--- a/TiendApp/app/src/main/res/menu/home_menu.xml
+++ b/TiendApp/app/src/main/res/menu/home_menu.xml
@@ -13,8 +13,9 @@
         android:title="@string/search_action"
         android:id="@+id/home_tool_bar_search_bar"
         android:icon="@drawable/ic_search_white_24dp"
-        app:showAsAction="ifRoom"
-        app:actionViewClass="android.support.v7.widget.SearchView"/>
+        app:showAsAction="always|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+
 
         />
 </menu>
