--- a/TiendApp/app/src/main/res/layout/activity_categories.xml
+++ b/TiendApp/app/src/main/res/layout/activity_categories.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,12 +12,88 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".CategoriesActivity">
 
-    <include
-        tools:context =".CategoriesActivity"
-        layout="@layout/navigation_drawer" />
 
-    <TextView android:text="EePuto!" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:id="@+id/hola_mundo"/>
+
+
+
+
+    <TabHost
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/categories_tab_host"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:clickable="true">
+
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary">
+
+
+            </TabWidget>
+
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:id="@+id/categories_tab_content_categories"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="!"/>
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/categories_tab_content_news"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="123"/>
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/categories_tab_content_sale"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="fasghh"/>
+
+
+
+                </LinearLayout>
+            </FrameLayout>
+        </LinearLayout>
+    </TabHost>
+
+    <!--<include
+        tools:context =".CategoriesActivity"
+        layout="@layout/navigation_drawer" />-->
 
 
 </RelativeLayout>
