--- a/TiendApp/app/src/main/res/layout/activity_categories.xml
+++ b/TiendApp/app/src/main/res/layout/activity_categories.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
+    android:id="@+id/categories_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -91,9 +92,7 @@
         </LinearLayout>
     </TabHost>
 
-    <!--<include
-        tools:context =".CategoriesActivity"
-        layout="@layout/navigation_drawer" />-->
+
 
 
 </RelativeLayout>
