--- a/TiendApp/app/src/main/res/layout/activity_home.xml
+++ b/TiendApp/app/src/main/res/layout/activity_home.xml
@@ -10,7 +10,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".HomeActivity">
+    tools:context=".HomeActivity"
+    android:id="@+id/home_layout">
 <!--
     <include
         layout="@layout/tool_bar"/>-->
@@ -18,10 +19,39 @@
     <TextView android:text="Hello WorldDDASDASDASDASDASDASDASDASDASDASDASDASDASDASASD!" android:layout_width="wrap_content"
         android:layout_height="wrap_content" android:id="@+id/hola_mundo"/>
 
-
+<!--
     <include
         tools:context=".HomeActivity"
-        layout="@layout/navigation_drawer"/>
+        layout="@layout/navigation_drawer"/>-->
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="105dp"
+        android:layout_above="@+id/button"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="61dp" />
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="210dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="96dp"
+        android:id="@+id/button" />
+
+
+
 
 
 </RelativeLayout>
