--- a/TiendApp/app/src/main/res/layout/navigation_drawer.xml
+++ b/TiendApp/app/src/main/res/layout/navigation_drawer.xml
@@ -2,33 +2,36 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:id="@+id/navigation_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:elevation="16dp"
     tools:context=""
-    >
-    <FrameLayout
-        android:id="@+id/navigation_drawer_content_frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    android:focusable="false"
+    android:touchscreenBlocksFocus="false">
 
-    <android.support.v7.widget.RecyclerView
+        <FrameLayout
+            android:id="@+id/navigation_drawer_content_frame"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
-        app:headerLayout="@layout/navigation_drawer_header"
-        android:id="@+id/left_drawer"
-        android:layout_width="280dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start|bottom"
-        android:choiceMode="singleChoice"
-        android:divider="#000000"
-        android:dividerHeight="0dp"
-        android:background="#FFFFFF">
+        <android.support.v7.widget.RecyclerView
+
+            app:headerLayout="@layout/navigation_drawer_header"
+            android:id="@+id/left_drawer"
+            android:layout_width="280dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="start|bottom"
+            android:choiceMode="singleChoice"
+            android:divider="#000000"
+            android:dividerHeight="0dp"
+            android:background="#FFFFFF"
+            android:visibility="visible">
 
 
-
-    </android.support.v7.widget.RecyclerView>
+        </android.support.v7.widget.RecyclerView>
 
 
 
