Product Activity, Shopping bag and fixes

--- a/TiendApp/app/src/main/res/values/colors.xml
+++ b/TiendApp/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="Text">#424242</color>
     <color name="colorAccent">#607D8B</color>
     <color name="windowBackground">#FAFAFA</color>
+    <color name="blue">#1560BD</color>
 </resources>
