--- a/TiendApp/app/src/main/res/layout/activity_product.xml
+++ b/TiendApp/app/src/main/res/layout/activity_product.xml
@@ -102,8 +102,46 @@
 
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:text="123"/>
+                        android:layout_height="40dp"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="@string/prod_title"
+                        android:textColor="#000000"
+                        android:textSize="30sp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginLeft="5dp"
+                        />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="36dp"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="@string/prod_brand"
+                        android:textColor="#000000"
+                        android:textSize="24sp"
+                        android:layout_marginTop="2dp"
+                        android:layout_marginLeft="5dp"
+                        />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@android:color/darker_gray"/>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <Button
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/blue"
+                            android:text="@string/add_to_shopping_bag"
+                            android:textSize="16sp"
+                            android:textAlignment="center"
+                            android:layout_alignParentBottom="true"
+                            android:id="@+id/button_2" />
+
+                    </RelativeLayout>
 
 
                 </LinearLayout>
