--- a/TiendApp/app/src/main/res/layout/fragment_one.xml
+++ b/TiendApp/app/src/main/res/layout/fragment_one.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:textSize="40dp"
+        android:textSize="@dimen/title_size"
         android:textStyle="bold"
         android:layout_centerInParent="true"/>
 
