--- a/TiendApp/app/src/main/res/values/dimens.xml
+++ b/TiendApp/app/src/main/res/values/dimens.xml
@@ -3,4 +3,9 @@
     <dimen name="activity_horizontal_margin">0dp</dimen>
     <dimen name="activity_vertical_margin">0dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="title_size">20dp</dimen>
+    <dimen name="title_margin_top">40dp</dimen>
+
+    <dimen name="content_horizontal_margin">20dp</dimen>
 </resources>
