--- a/TiendApp/app/src/main/res/layout/activity_catalogue.xml
+++ b/TiendApp/app/src/main/res/layout/activity_catalogue.xml
@@ -2,12 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
 
+    android:id="@+id/catalogue_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="hci.tiendapp.Catalogue">
+    tools:context="hci.tiendapp.activities.CatalogueActivity">
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></ListView>
+
+
 
 </RelativeLayout>
