--- a/TiendApp/app/src/main/res/layout/activity_settings.xml
+++ b/TiendApp/app/src/main/res/layout/activity_settings.xml
@@ -12,8 +12,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context=".SettingsActivity"
-    android:id="@+id/settings_layout"
-    android:weightSum="1">
+    android:id="@+id/settings_layout">
     <!--
         <include
             layout="@layout/tool_bar"/>-->
