--- a/TiendApp/app/src/main/res/values/colors.xml
+++ b/TiendApp/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="colorAccent">#607D8B</color>
     <color name="windowBackground">#FAFAFA</color>
     <color name="blue">#1560BD</color>
+    <color name="productText">#AAAAAA</color>
 </resources>
