--- a/TiendApp/app/src/main/res/layout/activity_product.xml
+++ b/TiendApp/app/src/main/res/layout/activity_product.xml
@@ -52,24 +52,24 @@
 
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:text="@string/prod_title"
                         android:textColor="#000000"
                         android:textSize="30sp"
                         android:layout_marginTop="5dp"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginLeft="15dp"
                         />
 
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="36dp"
+                        android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:text="@string/prod_brand"
                         android:textColor="#000000"
                         android:textSize="24sp"
                         android:layout_marginTop="2dp"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginLeft="15dp"
                         />
 
                     <View
@@ -91,6 +91,9 @@
                             android:layout_alignParentBottom="true"
                             android:id="@+id/button" />
 
+                        
+
+
                     </RelativeLayout>
                 </LinearLayout>
 
@@ -102,30 +105,117 @@
 
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
+                        android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:text="@string/prod_title"
                         android:textColor="#000000"
                         android:textSize="30sp"
                         android:layout_marginTop="5dp"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginLeft="15dp"
                         />
 
                     <TextView
                         android:layout_width="match_parent"
-                        android:layout_height="36dp"
+                        android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceLarge"
                         android:text="@string/prod_brand"
                         android:textColor="#000000"
                         android:textSize="24sp"
                         android:layout_marginTop="2dp"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginLeft="15dp"
                         />
 
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:background="@android:color/darker_gray"/>
+
+
+                    <!-- Layout for details -->
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/prod_brand"
+                        android:textColor="@color/productText"
+                        android:textSize="18sp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="30dp"
+                        />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/prod_age"
+                        android:textColor="@color/productText"
+                        android:textSize="18sp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="10dp"
+                        />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/prod_sex"
+                        android:textColor="@color/productText"
+                        android:textSize="18sp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="10dp"
+                        />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/prod_color"
+                        android:textColor="@color/productText"
+                        android:textSize="18sp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="10dp"
+                        />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/prod_material"
+                        android:textColor="@color/productText"
+                        android:textSize="18sp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="10dp"
+                        />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/prod_style"
+                        android:textColor="@color/productText"
+                        android:textSize="18sp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="10dp"
+                        />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/prod_occasion"
+                        android:textColor="@color/productText"
+                        android:textSize="18sp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="10dp"
+                        />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/prod_sizes_disp"
+                        android:textColor="@color/productText"
+                        android:textSize="18sp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="10dp"
+                        />
+
+
+
+
+
+
+
+
+
+
+
 
                     <RelativeLayout
                         android:layout_width="match_parent"
