--- a/TiendApp/app/src/main/res/layout/activity_product.xml
+++ b/TiendApp/app/src/main/res/layout/activity_product.xml
@@ -77,6 +77,31 @@
                         android:layout_height="1dp"
                         android:background="@android:color/darker_gray"/>
 
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="330dp"
+                        android:id="@+id/imageView"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="@string/prod_price"
+                        android:layout_gravity="right"
+                        android:textColor="#000000"
+                        android:textSize="24sp"
+                        android:id="@+id/price"
+                        android:layout_above="@+id/button"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginRight="10dp" />
+
+
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
