--- a/TiendApp/app/src/main/res/layout-land/activity_catalogue.xml
+++ b/TiendApp/app/src/main/res/layout-land/activity_catalogue.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+        xmlns:tools="http://schemas.android.com/tools"
 
-    android:id="@+id/catalogue_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="hci.tiendapp.activities.CatalogueActivity">
+        android:id="@+id/catalogue_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        tools:context="hci.tiendapp.activities.CatalogueActivity">
 
-    <ListView
+    <hci.tiendapp.customviews.HorizontalListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/content_horizontal_margin"
         android:layout_marginBottom="@dimen/content_horizontal_margin"
         android:layout_marginTop="@dimen/content_vertical_margin"
+        android:background="@color/textColorPrimary"
         android:divider="@null"
         android:dividerHeight="0dp"
         android:id="@+id/product_list"/>
@@ -28,18 +29,13 @@
         android:layout_marginBottom="@dimen/content_horizontal_margin"
         android:layout_marginTop="@dimen/content_vertical_margin"
         android:layout_marginRight="@dimen/content_horizontal_margin"
-
         android:dividerHeight="0dp"
         android:id="@+id/product_grid"
-        android:numColumns="2"
+        android:numColumns="3"
         android:horizontalSpacing="15dp"
         android:verticalSpacing="10dp">
 
 
     </GridView>
-
-
-
-
 
 </RelativeLayout>
