--- a/TiendApp/app/src/main/res/layout-land/catalogue_list.xml
+++ b/TiendApp/app/src/main/res/layout-land/catalogue_list.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
 
     android:id="@+id/product_list_item"
-    android:orientation="horizontal" 
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="30dp"
-    android:background="@color/textColorPrimary">
-    
+    android:paddingRight="30dp">
+
     <ImageView
         android:id="@+id/product_image"
         android:layout_width="100dp"
@@ -19,16 +18,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingLeft="20dp"
         android:layout_marginTop="10dp">
 
 
         <TextView
 
             android:id="@+id/product_name"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:textSize="15dp"/>
+            android:textSize="15dp"
+
+            android:minLines="2"
+            android:maxLines="2"/>
 
         <TextView
 
