--- a/TiendApp/app/src/main/res/layout/catalogue_grid.xml
+++ b/TiendApp/app/src/main/res/layout/catalogue_grid.xml
@@ -1,34 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
 
-    android:id="@+id/product_list_item"
-    android:orientation="horizontal" 
-    android:layout_width="match_parent"
+    android:id="@+id/product_grid_item"
+    android:orientation="vertical"
+    android:layout_width="100dp"
     android:layout_height="match_parent"
-    android:paddingBottom="30dp"
-    android:background="@color/textColorPrimary">
-    
+    android:paddingBottom="10dp"
+    android:background="@drawable/border"
+    >
+
+
     <ImageView
         android:id="@+id/product_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="5dp"
+
         />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingLeft="20dp"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="5dp">
 
 
         <TextView
 
             android:id="@+id/product_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="15dp"/>
+            android:textSize="15dp"
+            android:minLines="2"
+            android:maxLines="2"/>
 
         <TextView
 
