--- a/TiendApp/app/src/main/res/menu/catalogue_menu.xml
+++ b/TiendApp/app/src/main/res/menu/catalogue_menu.xml
@@ -6,8 +6,8 @@
         android:title="@string/search_action"
         android:id="@+id/home_tool_bar_search_bar"
         android:icon="@drawable/ic_search_white_24dp"
-        android:orderInCategory="100"
-        app:showAsAction="ifRoom"
+        android:orderInCategory="1"
+        app:showAsAction="always"
 
         />
 
@@ -16,7 +16,7 @@
         android:title="@string/filter_action"
         android:id="@+id/filter_action"
         android:icon="@drawable/ic_filter_list_white_24dp"
-        android:orderInCategory="90"
+        android:orderInCategory="2"
         app:showAsAction="ifRoom"
 
         />
@@ -24,16 +24,30 @@
         android:title="@string/sort_action"
         android:id="@+id/sort_action"
         android:icon="@drawable/ic_sort_white_24dp"
-        android:orderInCategory="90"
+        android:orderInCategory="3"
         app:showAsAction="ifRoom"
 
         />
 
     <item
-        android:title="@string/more_action"
-        android:id="@+id/more_action"
-        android:icon="@drawable/ic_more_vert_white_24dp"
-        app:showAsAction="always"
+        android:title="@string/list_view_action"
+        android:id="@+id/list_view_action"
+        android:icon="@drawable/ic_view_list_white_24dp"
+        android:orderInCategory="4"
+        app:showAsAction="ifRoom"
 
         />
+
+
+
+    <item
+        android:title="@string/grid_view_action"
+        android:id="@+id/grid_view_action"
+        android:icon="@drawable/ic_view_module_white_24dp"
+        android:orderInCategory="5"
+        app:showAsAction="ifRoom"
+
+        />
+
+
 </menu>
