--- a/TiendApp/app/src/main/res/values/dimens.xml
+++ b/TiendApp/app/src/main/res/values/dimens.xml
@@ -7,5 +7,7 @@
     <dimen name="title_size">20dp</dimen>
     <dimen name="title_margin_top">40dp</dimen>
 
+
+    <dimen name="content_vertical_margin">30dp</dimen>
     <dimen name="content_horizontal_margin">20dp</dimen>
 </resources>
