--- a/TiendApp/app/src/main/res/values/colors.xml
+++ b/TiendApp/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="Text">#424242</color>
     <color name="colorAccent">#607D8B</color>
+    <color name="colorAccentTransparent">#DF607D8B</color>
     <color name="windowBackground">#FAFAFA</color>
     <color name="blue">#1560BD</color>
     <color name="productText">#AAAAAA</color>
