--- a/TiendApp/app/src/main/res/layout/activity_product.xml
+++ b/TiendApp/app/src/main/res/layout/activity_product.xml
@@ -33,15 +33,14 @@
                 android:id="@android:id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorPrimary">
+                android:background="@color/colorPrimary"/>
 
-
-            </TabWidget>
 
             <FrameLayout
                 android:id="@android:id/tabcontent"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
 
                 <LinearLayout
                     android:id="@+id/products_tab_content_general"
@@ -51,17 +50,19 @@
 
 
                     <TextView
+                        android:id="@+id/prod_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:text="@string/prod_title"
-                        android:textColor="#000000"
-                        android:textSize="30sp"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="@dimen/title_size"
                         android:layout_marginTop="5dp"
                         android:layout_marginLeft="15dp"
+                        android:minLines="2"
+                        android:maxLines="2"
                         />
 
-                    <TextView
+                   <!-- <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -70,56 +71,97 @@
                         android:textSize="24sp"
                         android:layout_marginTop="2dp"
                         android:layout_marginLeft="15dp"
-                        />
+                        /> -->
 
-                    <View
+                    <View style="@style/Divider"/>
+
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@android:color/darker_gray"/>
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="330dp"
-                        android:id="@+id/imageView"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentEnd="true" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:text="@string/prod_price"
-                        android:layout_gravity="right"
-                        android:textColor="#000000"
-                        android:textSize="24sp"
-                        android:id="@+id/price"
-                        android:layout_above="@+id/button"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginRight="10dp" />
+                        android:orientation="vertical">
+
+                        <!--<Gallery
+                            android:id="@+id/prod_image_gallery"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
+
+                        <ImageView
+                            android:id="@+id/prod_current_image"
+                            android:layout_width="match_parent"
+                            android:layout_height="330dp"
+                            android:layout_alignParentTop="true"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
+                            android:layout_alignParentRight="true"
+                            android:layout_alignParentEnd="true" /> -->
+                        <!--
+                        <com.daimajia.slider.library.SliderLayout
+                            android:id="@+id/prod_images_slider"
+                            android:layout_width="match_parent"
+                            android:layout_height="200dp"
+                            app:pager_animation="Accordion"
+                            app:auto_cycle="false"
+                            app:indicator_visibility="visible"/>
+
+
+                        <com.daimajia.slider.library.Indicators.PagerIndicator
+                            android:id="@+id/custom_indicator"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            app:selected_color="#0095BF"
+                            app:unselected_color="#55333333"
+                            app:selected_drawable="@drawable/logo2"
+                            app:shape="oval"
+                            app:selected_padding_left="5dp"
+                            app:selected_padding_right="5dp"
+                            app:unselected_padding_left="5dp"
+                            app:unselected_padding_right="5dp"
+                            android:layout_centerHorizontal="true"
+                            android:layout_alignParentBottom="true"
+                            app:selected_width="6dp"
+                            app:selected_height="6dp"
+                            app:unselected_width="6dp"
+                            app:unselected_height="6dp"
+                            android:layout_marginBottom="20dp"
+                            />
+
+                        <com.daimajia.slider.library.Indicators.PagerIndicator
+                            android:id="@+id/custom_indicator2"
+                            style="@style/AndroidImageSlider_Corner_Oval_Orange"
+                            android:layout_centerHorizontal="true"
+                            android:layout_alignParentBottom="true"
+                            android:layout_marginBottom="20dp"
+                            />-->
+                        
+                        
+                    </LinearLayout>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="bottom">
+
+                        <include
+                            layout="@layout/buying_controls"/>
+
+
+                    </RelativeLayout>
+
+
 
 
                     <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <Button
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@color/blue"
-                            android:text="@string/add_to_shopping_bag"
-                            android:textSize="16sp"
-                            android:textAlignment="center"
-                            android:layout_alignParentBottom="true"
-                            android:id="@+id/button" />
+                        android:layout_height="match_parent"
+                        android:layout_gravity="bottom">
 
 
-
-
+                        <include layout="@layout/add_to_cart_button"
+                        />
                     </RelativeLayout>
+
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -232,30 +274,14 @@
                         />
 
 
-
-
-
-
-
-
-
-
-
-
                     <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="match_parent"
+                        android:layout_gravity="bottom">
 
-                        <Button
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@color/blue"
-                            android:text="@string/add_to_shopping_bag"
-                            android:textSize="16sp"
-                            android:textAlignment="center"
-                            android:layout_alignParentBottom="true"
-                            android:id="@+id/button_2" />
 
+                        <include layout="@layout/add_to_cart_button"
+                            />
                     </RelativeLayout>
 
 
