--- a/TiendApp/app/src/main/res/menu/categories_menu.xml
+++ b/TiendApp/app/src/main/res/menu/categories_menu.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-
-    tools:context=".activities.HomeActivity."
-    android:id="@+id/home_tool_bar">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
 
     <item
         android:title="@string/search_action"
-        android:id="@+id/categories_tool_bar_search_bar"
+        android:id="@+id/tool_bar_search"
         android:icon="@drawable/ic_search_white_24dp"
         app:showAsAction="ifRoom"
 
