--- a/TiendApp/app/src/main/res/values/styles.xml
+++ b/TiendApp/app/src/main/res/values/styles.xml
@@ -25,5 +25,24 @@
         <item name="android:background">?android:attr/listDivider</item>
     </style>
 
+    <style name="Spinner">
+        <item name="android:spinnerMode">dropdown</item>
+        <item name="android:background">@drawable/spinner_background</item>
+        <item name="android:dropDownSelector">@drawable/ic_arrow_drop_down</item>
+    </style>
+
+    <style name="prod_details_names">
+        <item name="android:textSize">@dimen/prod_details_name</item>
+        <item name="android:textColor">@color/text_grey</item>
+        <item name="android:paddingBottom">10dp</item>
+    </style>
+
+    <style name="prod_details_values">
+        <item name="android:textSize">@dimen/prod_details_values</item>
+        <item name="android:textColor">@color/text</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 
 </resources>
