--- a/TiendApp/app/src/main/res/menu/catalogue_menu.xml
+++ b/TiendApp/app/src/main/res/menu/catalogue_menu.xml
@@ -7,7 +7,8 @@
         android:id="@+id/tool_bar_search"
         android:icon="@drawable/ic_search_white_24dp"
         android:orderInCategory="1"
-        app:showAsAction="always"
+        app:showAsAction="always|collapseActionView"
+        app:actionViewClass="android.support.v7.widget.SearchView"
 
         />
 
