--- a/TiendApp/app/src/main/res/menu/product_menu.xml
+++ b/TiendApp/app/src/main/res/menu/product_menu.xml
@@ -9,6 +9,7 @@
         android:title="@string/search_action"
         android:id="@+id/tool_bar_search"
         android:icon="@drawable/ic_search_white_24dp"
+        android:orderInCategory="1"
         app:showAsAction="always|collapseActionView"
         app:actionViewClass="android.support.v7.widget.SearchView"
 
@@ -16,12 +17,10 @@
         />
 
     <item
-        android:title="@string/search_action"
+        android:title="@string/share_action"
         android:id="@+id/tool_bar_share"
         android:icon="@drawable/ic_share_white_24dp"
+        android:orderInCategory="2"
         app:showAsAction="always|collapseActionView"
-        app:actionViewClass="android.support.v7.widget.SearchView"
-
-
         />
 </menu>
