--- a/TiendApp/app/src/main/res/layout/activity_home.xml
+++ b/TiendApp/app/src/main/res/layout/activity_home.xml
@@ -12,11 +12,184 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".HomeActivity"
     android:id="@+id/home_layout">
-<!--
-    <include
-        layout="@layout/tool_bar"/>-->
 
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/scrollView_home1" >
+
+    </ScrollView>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+
+        <!-- Men -->
+
+        <TextView
+            android:id="@+id/men_home"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/gender_men"
+            android:textSize="20sp"
+            android:layout_marginTop="25dp"
+            android:layout_marginLeft="20dp"
+            android:textColor="#000000"
+            />
+
+        <View style="@style/Divider"
+            android:id="@+id/div1"
+            android:layout_below="@+id/men_home"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/scrollView_home2" >
+
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingRight="30dp">
+
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp">
+
+                    <ImageView
+                        android:id="@+id/product_image"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        />
+
+                    <TextView
+                        android:id="@+id/product_name"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:textSize="15dp"
+                        android:minLines="2"
+                        android:maxLines="2"
+                        android:layout_below="@+id/product_image" />
+
+                    <TextView
+                        android:id="@+id/product_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="15dp"
+                        android:textStyle="bold"
+                        android:layout_below="@+id/product_name" />
+
+
+
+                </RelativeLayout>
+
+
+            </LinearLayout>
+        </ScrollView>
+
+        <TextView
+            android:id="@+id/women_home"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/gender_women"
+            android:textSize="20sp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:textColor="#000000"
+            android:layout_below="@+id/div1"
+            />
+
+        <View style="@style/Divider"
+            android:id="@+id/div2"
+            android:layout_below="@+id/women_home"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:id="@+id/children_home"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/gender_kids"
+            android:textSize="20sp"
+            android:layout_marginTop="150dp"
+            android:layout_marginLeft="20dp"
+            android:textColor="#000000"
+            android:layout_below="@+id/div2"
+            />
+
+        <View style="@style/Divider"
+            android:id="@+id/div3"
+            android:layout_below="@+id/children_home"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:id="@+id/babies_home"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/gender_babies"
+            android:textSize="20sp"
+            android:layout_marginTop="150dp"
+            android:layout_marginLeft="20dp"
+            android:textColor="#000000"
+            android:layout_below="@+id/div3"
+            />
+
+        <View style="@style/Divider"
+            android:id="@+id/div4"
+            android:layout_below="@+id/babies_home"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:id="@+id/new_ins_home"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/new_ins"
+            android:textSize="20sp"
+            android:layout_marginTop="150dp"
+            android:layout_marginLeft="20dp"
+            android:textColor="#000000"
+            android:layout_below="@+id/div4"
+            />
+
+        <View style="@style/Divider"
+            android:id="@+id/div5"
+            android:layout_below="@+id/new_ins_home"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:id="@+id/sale_home"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/sale"
+            android:textSize="20sp"
+            android:layout_marginTop="150dp"
+            android:layout_marginLeft="20dp"
+            android:textColor="#000000"
+            android:layout_below="@+id/div5"
+            />
+
+        <View style="@style/Divider"
+            android:id="@+id/div6"
+            android:layout_below="@+id/sale_home"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+    </LinearLayout>
 
 
 </RelativeLayout>
